<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_4"
        android:background="@color/colorGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:text="@string/tv_type"/>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_times"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:gravity="center"
                android:text="@string/tv_times"/>

            <Spinner
                android:id="@+id/spinner_times"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_salary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/sp_12"
                android:text="@string/tv_salary"/>

            <EditText
                android:id="@+id/edtTxt_salary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_insurance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:gravity="center"
                android:text="@string/tv_insurance"/>

            <EditText
                android:id="@+id/edtTxt_insurance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/edtTxt_value"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_additional"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:gravity="center"
                android:text="@string/tv_additional"/>

            <EditText
                android:id="@+id/edtTxt_additional"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="@string/edtTxt_value"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_income"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/sp_12"
                android:layout_weight="1"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edtTxt_income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/edtTxt_value"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_management"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4"
            android:background="@color/colorGreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_management"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/sp_12"
                android:gravity="center"
                android:text=""/>

            <Spinner
                android:id="@+id/spinner_management"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_4"
        android:background="@color/colorGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_12"
            android:text="@string/btn_reset"/>

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_12"
            android:text="@string/btn_calculate"/>

    </LinearLayout>
</LinearLayout>